[package]
name = "tree-builder"
authors = ["Edis Hasaj"]
version = "0.0.1"
edition = "2021"
license = "GPL-3.0"
description = "Parser Generator library which uses Nom and procedural macros to generate recursive-descent parsers."
repository = "https://github.com/edisnord/tree-builder"
license-file = "LICENSE.txt"
keywords = ["treebuilder", "macro", "parser", "nom"]
categories = ["development-tools", "parsing"]

[dev-dependencies]
trybuild = { version = "1.0.80", features = ["diff"] }

[dependencies]
tree-builder-macro = "0.0.1"
nom = "7.1.3"