[package]
name = "tree-builder-macro"
version = "0.0.1"
edition = "2021"
authors = ["Edis Hasaj"]
license = "GPL-3.0"
license-file = "LICENSE.txt"
keywords = ["treebuilder", "macro", "parser", "nom"]
categories = ["development-tools", "parsing"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.23"
syn = "2.0.17"
nom = "7.1.3"
proc-macro2 = "1.0.58"
regex = "1.8.4"
